Update deployment scripts