@@ -3,7 +3,6 @@ FROM maven:3.8.3-openjdk-17 AS build
 WORKDIR /app
 ADD . /app
 RUN --mount=type=cache,target=/root/.m2 mvn -f /app/pom.xml clean package
-# TODO: Get project version with `mvn help:evaluate -Dexpression=project.version -q -DforceStdout`
 
 
 # Clean image runtime
@@ -12,4 +11,4 @@ RUN mkdir /app
 WORKDIR /app
 COPY --from=build /app/api/target/marketplace-catalog-api.jar /app
 EXPOSE 8801
-CMD ["java", "-jar", "marketplace-catalog-api.jar"]
+CMD ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED","-jar", "marketplace-catalog-api.jar"]
